--- a/HTML & CSS/index.html
+++ b/HTML & CSS/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Website Login.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sign In - EasyMart</title>
 </head>
 <body>
@@ -53,3 +53,4 @@
   </div>  
 </body>
 </html>
+
